# bramble-lang

./: .gitignore  Cargo.toml  README.md  design.md  output.s  start-docker.sh  tests.sh
.github/workflows/: braid.yml  rust.yml
.trunk/: trunk.yaml
braid/std/: io.asm  io.br
bramble/std/: io.br
design/: TLC.md  c_interop.md  core_lib.md  grammar.md  syntax-review.md  user_input.md
design/design_reviews/: readme.md
design/features/: arrays.md  projects.md
design/internals/: errors.md
design/rfc/: 248-raw-pointers.md  README.md  rfc248-raw-pointers-accepted.md  rfc248-raw-pointers-draft.md  rfc248-raw-pointers.md  rfc257-addressable-expressions-accepted.md  rfc257-addressable-expressions-draft.md  rfc257-addressable-expressions.md
docker/linux/: Dockerfile  docker-compose.yaml
src/: .main.rs.swp  cli.rs  compiler.rs  io.rs  lexer.rs  lib.rs  main.rs  manifest.rs  parser.rs  project.rs  result.rs  type_checker.rs
src/ast/: expression.rs  extern_decl.rs  mod.rs  module.rs  node.rs  parameter.rs  path.rs  routinedef.rs  statement.rs  structdef.rs  ty.rs
src/compiler/: ast.rs  compiler.rs  error.rs  import.rs  mod.rs  stringtable.rs  tmp_asm.rs  vartable.rs
src/diagnostics/: config.rs  consolewriter.rs  jsonwriter.rs  mod.rs  tracer.rs
src/lexer/: lexer.rs  lexer2.rs  mod.rs  tokens.rs
src/llvm/: llvmir.rs  mod.rs  stringpool.rs
src/parser/: expression.rs  mod.rs  parser.rs  pnode.rs  (+2 more)
test/: make-import_test.sh  make-llvm.sh  make.sh  simple.br  simple_coroutine.br  syntax-test.sh  test-imports.sh  test-llvm.sh  test-syntax.sh  test.sh
(+537 files in other folders)
