[package]
name = "bramble-lang"
version = "0.100.0"
authors = ["erich"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
serde = { version = "1.*", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "*"
stdext = "0.2.1"
log = "*"
simplelog = "^0.10.0"
rand="*"